# RB1-Base

my_rb1_description/launch/: RvizRB1config.rviz  display.launch
my_rb1_description/src/urdf/: my_rb1_robot.urdf
my_rb1_description/urdf/: my_rb1_robot.urdf
my_rb1_gazebo/: CMakeLists.txt  package.xml
my_rb1_gazebo/launch/: my_rb1_robot_warehouse.launch
my_rb1_ros/: CMakeLists.txt  package.xml
my_rb1_ros/launch/: rotate_service.launch
my_rb1_ros/src/: rotate_service.cpp
